# FinDART

./: .dockerignore  .env.example  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 20260601_0001_initial_schema.py  20260613_0002_remove_collection_runtime_tables.py  20260613_0003_widen_dart_account_id.py  20260617_0004_add_today_serving_tables.py  20260618_0005_add_tracked_issues.py
app/: main.py  schemas.py  worker.py
app/api/v1/: companies.py  health.py  ingest.py  jobs.py  router.py  today.py
app/core/: config.py
app/db/: models.py  session.py
app/services/: collectors.py  companies.py  fdr_client.py  jobs.py  worker.py
docs/: api_spec.md  db_schema.md  schema.sql
